# fritz

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  docker-compose.traefik.defaults.yaml  fritz  fritz.defaults.yaml  fritz.yaml  local.yaml  package.json  pyproject.toml  requirements.txt  rspack.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.org  build-and-deploy-docs.yaml  build-docker.yml  build-test-deploy.yaml  build-test-doc_upload.yaml  integration-tests.yaml  test-integration.yaml  typecheck.yaml
.requirements/: dev.txt  doc.txt  ext.txt  services.txt
data/: taxonomy_fritz.yaml
doc/: Makefile  api.md  catalogs.md  conf.py  developer.md  filter_tutorial.md  filters.md  index.rst  license.md  requirements.txt  run_your_own.md  technical_implementation.md  usage.md  user_APIexamples.md  user_guide.md
doc/data/filter_examples/: fritz_filter_01.json  fritz_filter_02.json  fritz_filter_101.json  fritz_filter_clu.json  fritz_filter_fast.json  fritz_filter_m31.json  fritz_filter_rcf.json
doc/fritz/: Makefile  api.md  catalogs.md  developer.md  license.md
doc/fritz/data/filter_examples/: fritz_filter_01.json  fritz_filter_02.json  fritz_filter_clu.json  fritz_filter_fast.json  fritz_filter_rcf.json  fritz_filter_rcf_simple.json  watchlist.json
extensions/: Makefile
extensions/skyportal/: docker-compose.skyportal.yaml  js-requirements.fritz.txt  package.fritz.json  rspack.config.js
extensions/skyportal/configs/: db_fritz.yaml
extensions/skyportal/data/: db_fritz.yaml  instruments_fritz.yaml  taxonomy_fritz.yaml  telescopes_fritz.yaml
extensions/skyportal/skyportal/: app_server_fritz.py  models.py  modelz.py
extensions/skyportal/tools/: data_loader.py
launcher/: __main__.py  config.py  kowalski.py  skyportal.py
launcher/commands/: __init__.py  build.py  develop.py  doc.py  lint.py  log.py  prune.py  run.py  stop.py  test.py  update.py
skyportal/: app_server_fritz.py
skyportal/handlers/api/: kowalski_filter.py
skyportal/tests/api/: test_alerts.py  test_archive.py  test_async_handlers.py  test_kowalski_filters.py  test_osg_service.py
static/js/ducks/: filter.ts  kowalski_archive.ts  kowalski_filter.ts
tools/: check_environment.py  push_dir_to_repo.py  status.py
(+207 files in other folders)
