[project]
name = 'fritz'
version = '0.1.0'
requires-python = '>=3.12,<3.13'
dependencies = [
    "fire>=0.3.1",
    "setuptools<78.2.0",
    "jinja2<3.2.0",
    "tomli>=2.4.0",
    "tomli-w>=1.2.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.2, <9.0.0",
    "pytest-randomly==4.0.1",
    "pytest-rerunfailures>=14.0",
    "selenium==4.38.0",
    "selenium-requests==2.0.4",
    "webdriver-manager>=4.0.1",
]
dev = [
    "pre-commit",
    "pyjwt>=2.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.26"
]
docs = [
    "sphinx",
    "sphinx_press_theme",
    "myst-parser==3.0.1",
]
ext = [
    "penquins>=2.4.1",
    "pymongo>=4.7.2",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint]
extend-select = [
#  "B",        # flake8-bugbear
  "I",        # isort
#  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
#  "D",        # pydocstyle (see tool.ruff.lint.pydocstyle below)
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
#  "G",        # flake8-logging-format
#  "PGH",      # pygrep-hooks                     # TODO skyportal: re-enable
  "PIE",      # flake8-pie
#  "PL",       # pylint
  "PLR0402",
#  "PT",       # flake8-pytest-style
#  "PTH",      # flake8-use-pathlib
#  "RET",      # flake8-return
#  "RUF",      # Ruff-specific
#  "SIM",      # flake8-simplify
  "SIM101",
  "SIM109",
  "SIM110",
  "SIM118",
  "SIM2",
#  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
#  "FURB",     # refurb
  "PYI",      # flake8-pyi
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "F",        # pyflakes
  "E",        # pycodestyle
  "EM101",    # Exception must not use a string literal
  "EM102",    # Exception must not use an f-string literal
  "PD",       # pandas-vet
  "ICN",      # flake8-import-conventions
  "PYI",      # flake8-pyi
  "NPY002",   # Replace legacy `np.random.random` call with `np.random.Generator`
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
